--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,12 @@ dependencies:
   shared_preferences: ^0.5.12+4
   http: ^0.12.2
   rounded_loading_button: ^1.0.0
-  flutter_uploader: ^1.2.1
   path_provider: ^1.6.24
   sqflite: ^1.3.0
   path:
   intl:
   responsive_table: ^0.1.1+8
   progress_dialog:
-  #qrscan: ^0.2.21
   flutter_launcher_icons: ^0.8.1
   connectivity:
   photo_view: ^0.10.3
@@ -43,6 +41,7 @@ dependencies:
   vibration: ^1.7.3
   qr_code_scanner: ^0.2.1
   #fl_animated_linechart: ^1.1.4
+  dio: ^3.0.10
 
 
   # The following adds the Cupertino Icons font to your application.
